[tool.poetry]
name = "black-litterman-portfolio-rebalancer"
version = "0.1.0"
description = ""
authors = ["chrisdybdahl <chrisdybdahl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
matplotlib = "^3.10.6"
eikon = "^1.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
